package gabriel.protocol.center;

enum MSG_ID
{
    REG_SERVER = 1;
    QUERY_GATEWAY = 2;
    MSG_MAX = 10000;
}

message Reg_Server_Msg
{
    message Server_Info
    {
        optional uint32 id = 1;
        optional uint32 type = 2;
        optional string name = 3;
    }

    optional uint32 msg_id = 1;
    optional string server_name = 2;
    repeated uint32 server_id = 3;
    repeated Server_Info server_info = 4;
}

